[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "multi-agent-orchestration-core"
version = "0.1.0"
description = "Distributed execution framework for autonomous AI agents"
authors = ["Architect <architect@example.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
temporalio = "^1.10.0"
prompt_toolkit = "^3.0.32"
protobuf = "^4.23.0"
docker = "^6.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
coverage = "^7.3.1"